fix overflow

--- a/_styl/entries/knot.styl
+++ b/_styl/entries/knot.styl
@@ -6,6 +6,7 @@ Knot
 
 #knot
   background-color: tomato
+  overflow: hidden
 
   div
     box-sizing: border-box
